+++++++++++
Python News
+++++++++++

(editors: check NEWS.help for information about editing NEWS using ReST.)

What's New in Python 2.3 alpha 2?
=================================

*Release date: XX-XXX-2003*

Core and builtins
-----------------

- List objects' sort() method now accepts None as the comparison function.
  Passing None is semantically identical to calling sort() with no
  arguments.

Extension modules
-----------------

- fcntl now exposes the strops.h I_* constants.

- datetime changes:

  today() and now() now round system timestamps to the closest
  microsecond <http://www.python.org/sf/661086>.

  In dt.asdatetime(tz), if tz.utcoffset(dt) returns a duration,
  ValueError is raised if tz.dst(dt) returns None (2.3a1 treated it
  as 0 instead).

  The tzinfo methods utcoffset() and dst() must return a timedelta object 
  (or None) now.  In 2.3a1 they could also return an int or long, but that 
  was an unhelpfully redundant leftover from an earlier version wherein 
  they couldn't return a timedelta.  TOOWTDI.

Library
-------

- realpath is now exported when doing from poxixpath import *.
  It is also exported for ntpath, macpath, and os2emxpath.
  See SF bug #659228.


Tools/Demos
-----------

TBD

Build
-----

- On systems which build using the configure script, compiler flags which
  used to be lumped together using the OPT flag have been split into two
  groups, OPT and BASECFLAGS.  OPT is meant to carry just optimization- and
  debug-related flags like "-g" and "-O3".  BASECFLAGS is meant to carry
  compiler flags that are required to get a clean compile.  On some
  platforms (many Linux flavors in particular) BASECFLAGS will be empty by
  default.  On others, such as Mac OS X and SCO, it will contain required
  flags.  This change allows people building Python to override OPT without
  fear of clobbering compiler flags which are required to get a clean build.

- On Darwin/Mac OS X platforms, /sw/lib and /sw/include are added to the